Notes/style.css
* {
    color: white;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #1a4636;
    overflow: auto;
}

#container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    background-color: #1a4636;
    margin-top: -10vh;
}

input[name="title"], select {
    width: 100%;
    margin: clamp(5px, 1vw, 10px);
    padding: clamp(6px, 1vw, 10px);
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    background-color: rgb(179, 179, 179);
    color: rgb(0, 0, 0);
    font-size: clamp(10px, 1.5vw, 25px);
}

#seeAll {
    position: absolute;
    top: 3%;
    left: 7%;
    margin-left: clamp(10px, 3vw, 70px);
    font-size: clamp(5px, 1.5vw, 25px);
    background-color: #22614a;
    border: 2px solid black;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    border-radius: clamp(4px, 0.8vw, 8px);
    padding: clamp(6px, 1vw, 10px);
    color: white;
}

textarea {
    width: 100%;
    height: 100%;
    margin: clamp(5px, 1vw, 10px);
    padding: clamp(6px, 1vw, 10px);
    border-radius: 4px;
    box-sizing: border-box;
    background-color: rgb(179, 179, 179);
    color: black;
    font-size: clamp(13px, 1.5vw, 25px);
}

textarea,
input {
    font-weight: bolder;
}

button[type="submit"] {
    width: 90%;
    margin: clamp(5px, 1vw, 10px);
    padding: clamp(6px, 1vw, 10px);
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    background-color: rgb(179, 179, 179);
    color: black;
    font-size: clamp(13px, 1.5vw, 25px);
}

#return {
    position: absolute;
    top: 3%;
    left: 1%;
    font-size: clamp(5Px, 1.5vw, 25px);
    background-color: #22614a;
    border: 2px solid black;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    border-radius: clamp(4px, 0.8vw, 8px);
    padding: clamp(6px, 1vw, 10px);
    color: white;
}

#return:hover,
#seeAll:hover {
    background-color: rgb(34, 88, 69);
}

option {
    color: black;
}

